--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "http": "^0.0.1-security",
     "http-proxy": "^1.18.1",
-    "socksv5": "^0.0.6"
+    "https": "^1.0.0",
+    "net": "^1.0.2",
+    "socksv5": "^0.0.6",
+    "url": "^0.11.4"
   }
 }
